<resources>
    <string name="app_name">Hollyfood</string>
    <string name="intro_title">Welcome To\nHollyfood App</string>
    <string name="intro_text">Find out the best\nand nearest restaurants\nand order the most delicious\nfood that comes to your home</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_title">Let\'s Login</string>
    <string name="login_text">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_title">Let\'s Register</string>
    <string name="register_text">Do you have an account? Log in</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_text">Enter your email to receive\na password reset code</string>
    <string name="send">Send</string>
    <string name="code_verification_title">Enter security code</string>
    <string name="code_verification_text">Please check your email for a message\nwith your code. We sent your code to:</string>
    <string name="code">Code</string>
    <string name="continue_string">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="account_verification_title">Your account has\n not been verified yet</string>
    <string name="logout">Logout</string>
    <string name="verify_account">Verify Account</string>
    <string name="save">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="laguage">Language</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="edit_personal_details">Edit Personal Details</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="add_restaurant_text">Please enter all required information\nfor your restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="title">Title</string>
    <string name="my_restaurants">My Restaurants</string>
    <string name="information">Information</string>
    <string name="phone_number_label">Phone Number : </string>
    <string name="address_label">Address : </string>
    <string name="see_menu">See Menu</string>
    <string name="see_orders">See Orders</string>
    <string name="name">Name</string>
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="delete_restaurant">Delete Restaurant</string>
    <string name="see_comments">See Comments</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upload_cover">Upload Cover</string>
    <string name="best_plates">Best Plates</string>
    <string name="search_now">Search Now</string>
    <string name="menu">Menu</string>
    <string name="plates">Menu</string>
    <string name="category">Category </string>
    <string name="plate">Plate</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="make_order">Make Order</string>
    <string name="billing_text">Hollyfood dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="order_information">Order Information</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="billing">Billing</string>
    <string name="check_out">Check Out</string>
    <string name="restaurants">Restaurants</string>
    <string name="date">Date</string>
    <string name="order_from">Order From  </string>
    <string name="restaurant_label">Restaurant: </string>
    <string name="restaurant">Restaurant</string>
    <string name="date_label">Date : </string>
    <string name="Orders">Orders</string>
    <string name="rate_restaurant">Rate Restaurant</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="Rate">Rate</string>
    <string name="edit_plate">Edit Plate</string>
    <string name="delete_plate">Delete Plate</string>
    <string name="add_plate">Add Plate</string>
    <string name="add_plate_text">Please enter all required information\nfor your plate</string>
    <string name="plate_name">Plate Name</string>
    <string name="select_category">Select Category</string>
    <string name="plate_price">Plate Price</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_role">Select Role</string>
    <string name="order_details">Order Details</string>
    <string name="client_name">Client Name: </string>
    <string name="fullname">Fullname</string>
    <string name="price_label">Price : </string>
    <string name="price">price</string>
    <string name="order">Order</string>
    <string name="plate_label">Plate : </string>
    <string name="quantity_label">Quantity : </string>
    <string name="quantity">Quantity</string>
    <string name="total_price_label">Total Price : </string>

</resources>