<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/restaurant_item"/>

    <TextView
        android:id="@+id/restaurantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        style="@style/h4"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/restaurantImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/restaurantDescription"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/restaurantTitle"
        app:layout_constraintStart_toStartOf="@id/restaurantTitle"
        app:layout_constraintTop_toBottomOf="@id/restaurantTitle" />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDescription"
        android:text="@string/information"/>

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/information"
        android:text="@string/address_label"/>

    <TextView
        android:id="@+id/restaurantAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/addressLabel"
        app:layout_constraintTop_toBottomOf="@id/information"
        android:text="@string/address"/>

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLabel"
        android:text="@string/phone_number_label"/>

    <TextView
        android:id="@+id/restaurantPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/phoneNumberLabel"
        app:layout_constraintTop_toBottomOf="@id/addressLabel"
        android:text="@string/phone_number"/>

    <ImageButton
        android:id="@+id/seeMenuButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_restaurant_menu"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/seeMenuText"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/see_menu"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seeMenuButton" />


    <ImageButton
        android:id="@+id/seeOrdersButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_list"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="110dp" />

    <TextView
        android:id="@+id/seeOrdersText"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:gravity="center"
        android:text="@string/see_orders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/seeOrdersButton" />

    <ImageButton
        android:id="@+id/seeCommentsButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_comment"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/seeCommentsText"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:gravity="center"
        android:text="@string/see_orders"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seeCommentsButton" />


</androidx.constraintlayout.widget.ConstraintLayout>